# translatify

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/backend/: .env-example  main.py  package.json  pyproject.toml  requirements.txt
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/components/: ErrorMessage.tsx  ImageViewer.tsx  LoadingSpinner.tsx  TranslationForm.tsx
