[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Backend API for manhwa translation service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.54.5"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pillow = "^11.2.1"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 